required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Make sure command-line programs use an exit status other than 0 
  when an error is encountered. (#3753)

- Applied patch to filter unwanted fribidi characters (#3763)

- Fixed lexer to set the proper state on URL variable substitutions

- Fixed Memory leak in PostGIS driver (#3768)

- Fixed PHP/MapScript symbol property setter method

- fix memory leak in bar charts

- fix some valgrind errors on agg rotated pixmap symbols

- WCS 2.0: Adjusted definition of NilValues.

- Fixed handling of PROJ_LIB value relative to mapfile path (#3094)

- Fixed compilation error with opengl support (#3769)

- add support for gml:Box for spatial filters (#3789)

- fix query map generation error introduced in beta2 when output format 
  initialized was made as needed. 

- fix incorrect PATTERN behavior on agg lines (#3787)

- report SOS DescribeObservationType in Capabilities (#3777)

- Updated lexer to detect time attribute bindings (e.g. `[item]`) in logical expressions

- Fixed layer context expressions (REQUIRES/LABELREQUIRES) (#3737)

- KML: Output ExtendedData (#3728)

- Fixed OWS usage of multiple layers with same name (#3778)

- WCS implementation should not lookup wms_* metadata (#3779)

- WCS 2.0: Adjusted definition of rangeType.

- Fixed OWS GetCapabilities to report only requests/operations that are enabled.

- WCS 2.0: Report only bands in the range subset.

- OWS requests should be completely blocked by default (#3755)

- SLD: check for limit on dash arrays (#3772)

- WMS: Apply sld after bbox and srs have been parsed (#3765)

Version 6.0.0-beta3 (2011-03-23)
--------------------------------
