@@ -15,6 +15,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Fix shp2img's -i flag to honour map level transparent, image quality and 
+  interlace settings.
+
 - Make sure command-line programs use an exit status other than 0 
   when an error is encountered. (#3753)
 
